[tool.poetry]
name = "cipher_yw3760"
version = "0.1.0"
description = "an example python package written by Yu Wang for MDS Fall 2021"
authors = ["YU WANG"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
